# oqs-provider

./: .clang-format  .gitignore  ALGORITHMS.md  CMakeLists.txt  CONFIGURE.md  CONTRIBUTING  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.txt  NOTES-UNIX.md  NOTES-Windows.md  README-OPENCA.md  README.md  RELEASE.md  SECURITY.md  STANDARDS.md  USAGE.md  notes.txt  sbom.cdx.json
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md
.github/workflows/: .linux.yml.swp  basic.yml  check_workflows.yml  clang-format.yml  coding_style.yml  demos.yml  liboqs-release.yml  linux.yml  macos.yml  platforms.yml  pr.yml  push.yml  release-test.yml  release.yml  standalone.yml  weekly.yml  windows.yml
examples/: CMakeLists.txt  static_oqsprovider.c
oqs-template/: generate-extras.yml  generate.py  generate.sh  generate.yml  generate.yml-0.15.0  generate.yml-0.9.1  generate_oid_nid_table.py  generatehelpers.py  oqs-kem-info.md  oqs-sig-info.md  requirements.txt
oqs-template/ALGORITHMS.md/: ids.fragment  ids.fragment-fail  oids.fragment
oqs-template/README.md/: algs.fragment
oqs-template/oqsprov/oqs_decode_der2key.c/: decoder_make.fragment
oqs-template/oqsprov/oqs_encode_key2any.c/: encoder_defines.fragment  encoder_make.fragment
oqs-template/oqsprov/oqs_kmgmt.c/: keymgmt_constructors.fragment  keymgmt_functions.fragment
oqs-template/oqsprov/oqs_prov.h/: alg_functions.fragment  endecoder_functions.fragment
oqs-template/oqsprov/oqs_sig.c/: sig_oids.fragment
oqs-template/oqsprov/oqsdecoders.inc/: make.fragment
oqs-template/oqsprov/oqsencoders.inc/: make.fragment
oqs-template/oqsprov/oqsprov.c/: alg_functions.fragment  assign_sig_oids.fragment  disable_ossl_algs.fragment  encoding_patching.fragment  kem_functions.fragment  keymgmt_functions.fragment  oid_patching.fragment  sig_functions.fragment
oqs-template/oqsprov/oqsprov_capabilities.c/: codepoint_patching.fragment  group_assignments.fragment  group_names.fragment  sigalg_assignments.fragment  sigalg_names.fragment
oqs-template/oqsprov/oqsprov_groups.c/: codepoint_patching.fragment  group_assignments.fragment  group_names.fragment
oqs-template/oqsprov/oqsprov_keys.c/: oqsnames.fragment
oqs-template/scripts/common.py/: kex_algs.fragment  ossl_kex_algs.fragment  ossl_sig_algs.fragment  sig_algs.fragment
oqs-template/scripts/runtests.sh/: algs.fragment
oqs-template/test/oqs_test_endecode.c/: add.fragment  freekeys.fragment  implement.fragment  signature_cases.fragment
oqs-template/test/oqs_test_groups.c/: group_cases.fragment
oqs-template/test/oqs_test_kems.c/: kem_cases.fragment
oqs-template/test/oqs_test_signatures.c/: signature_cases.fragment
oqs-template/test/test_common.c/: composite_sig_algs.fragment  ctx_str_sig_algs.fragment
oqsprov/: CMakeLists.txt  _prereqs.h  oqs_decode_der2key.c  oqs_encode_key2any.c  oqs_endecoder_common.c  oqs_endecoder_local.h  oqs_hyb_kem.c  oqs_kem.c  oqs_kmgmt.c  oqs_obj.h  oqs_obj_dat.h  oqs_obj_mac.h  oqs_obj_mac.num  oqs_obj_xref.h  oqs_obj_xref.txt  oqs_objects.txt  oqs_prov.h  oqs_sig.c  oqsdecoders.inc  oqsencoders.inc  oqsprov.c  oqsprov_bio.c  oqsprov_capabilities.c  oqsprov_groups.c  oqsprov_keys.c  oqsx.h
scripts/: bench_kem_encoders.sh  build-wrapper-liboqs-openssl-dynamic.sh  build-wrapper-liboqs-openssl-static.sh  common.py  do_code_format.sh  format_code.sh  fullbuild.sh  openssl-ca-no-oqsprovider.cnf  openssl-ca.cnf  oqs-openssl-certgen.sh  oqs-openssl-certverify.sh  oqs-openssl-cmssign.sh  oqs-openssl-cmsverify.sh  oqsprovider-ca.sh  oqsprovider-certgen.sh  oqsprovider-certverify.sh  oqsprovider-cmssign.sh  oqsprovider-cmsverify.sh  oqsprovider-externalinterop.sh  oqsprovider-pkcs12gen.sh  oqsprovider.rb  preptests.sh  release-test-ci.sh  release-test.sh  runtests.sh  runtests_encodings.sh  test_tls_full.py
test/: CMakeLists.txt  README.md  oqs.cnf  oqs_test_alg_overlap.c  oqs_test_endecode.c  oqs_test_evp_pkey_params.c  oqs_test_groups.c  oqs_test_hashnsign.c  oqs_test_kems.c  oqs_test_libctx.c  oqs_test_multi_thread.c  oqs_test_prop_str.c  oqs_test_signatures.c  oqs_test_tlssig.c  ssltestlib.c.patch  test_common.c  test_common.h  tlstest_helpers.c  tlstest_helpers.h
tmp/: p256_dilithium2_CA.crt  p256_dilithium2_CA.key  p256_dilithium2_CA.srl  p256_dilithium2_srv.crt  p256_dilithium2_srv.csr  p256_dilithium2_srv.key
